tests/compile_fail/invalid_rename.dd
from serdde.macros import Serde


@derive(Serde)
@Serde(rename_all="LOUD")
class InvalidRename:
    value: i32
